# crust

./: .gitignore  Cargo.toml  Makefile  README.md
scripts/: compare.sh
src/: crust.rs  main.rs  uci.rs  util.rs
src/engine/: evaluation.rs  generation.rs  mod.rs  searcher.rs  static_data.rs  tests.rs
src/engine/evaluation/: mod.rs  move_extensions.rs
src/engine/generation/: mod.rs  tests.rs
src/engine/ordering/: mod.rs
src/engine/searcher/: mod.rs  tests.rs
src/model/: generator.rs  mod.rs  pieces.rs  static_data.rs  tests.rs
src/uci/: mod.rs
