[package]
name = "crust"
version = "1.0.0"
edition = "2021"
description = "Chess engine written for educational purposes"
license = "none"
repository = "https://github.com/mcsim4s/crust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
lazy_static = "1.4.0"
rand = "0.8.5"
